[package]
name = "spider_agent_html"
version = "2.45.17"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "HTML processing utilities for spider_agent — cleaning, content analysis, and diffing."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["html", "cleaning", "web", "scraping", "agent"]
categories = ["web-programming", "text-processing"]
license = "MIT"
documentation = "https://docs.rs/spider_agent_html"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# HTML processing
lol_html = "2"
aho-corasick = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types from our types crate
spider_agent_types = { version = "2.45.17", path = "../spider_agent_types" }

[dev-dependencies]
serde_json = "1"
