[package]
name = "spider_chrome"
version = "2.11.12"
rust-version = "1.70"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/spider-rs/spider/spider_chrome"
repository = "https://github.com/spider-rs/spider"
description = "Library for interacting with a chrome instance with the chrome devtools protocol for spider"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[lib]
name = "chromiumoxide"

[dependencies]
async-tungstenite = "0.28"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
chromiumoxide_types = { version = "0.7" }
chromiumoxide_cdp = { version = "0.7" }
chromiumoxide_fetcher = { version = "0.7", default-features = false, optional = true }
serde_json = "1"
which = "6"
thiserror = "1"
url = "2"
base64 = "0.22"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "process",
]}
tracing = "0.1"
pin-project-lite = "0.2"
dunce = "1"
bytes = { version = "1", features = ["serde"], optional = true }
reqwest = { version = "0.12", default-features = false }
lazy_static = "1.5.0"
phf = { version = "0.11", features = ["macros"] }
adblock = { version = "0.8", optional = true, default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

[features]
default = ["tokio-runtime", "bytes"]
tokio-runtime = ["async-tungstenite/tokio-runtime"]
fetcher = []
bytes = ["dep:bytes"]
serde0 = []
adblock = ["dep:adblock"]

# Temporary features until cargo weak dependencies bug is fixed
# See https://github.com/rust-lang/cargo/issues/10801
_fetcher-rusttls-tokio = ["fetcher", "chromiumoxide_fetcher/_rustls-tokio"]
_fetcher-native-tokio = ["fetcher", "chromiumoxide_fetcher/_native-tokio"]

[[example]]
name = "wiki-tokio"
required-features = ["tokio-runtime"]

[[example]]
name = "iframe-workaround"
required-features = ["tokio-runtime", "tokio"]

[[example]]
name = "storage-cookie"
required-features = ["tokio-runtime"]

[[example]]
name = "console-logs"
required-features = ["tokio-runtime"]

[[example]]
name = "httpfuture"
required-features = ["tokio-runtime"]

[[example]]
name = "fetcher-tokio"
required-features = ["tokio-runtime", "_fetcher-native-tokio"]
