[package]
name = "spider_chrome"
version = "2.36.54"
rust-version = "1.70"
authors = ["j-mendez <jeff@spider.cloud>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/spider-rs/spider/spider_chrome"
repository = "https://github.com/spider-rs/spider"
description = "Library for interacting with a chrome instance with the chrome devtools protocol for spider"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[lib]
name = "chromiumoxide"

[dependencies]
tokio-tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
which = "6"
thiserror = "1"
url = "2"
base64 = "0.22"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "process",
] }
tracing = "0.1"
pin-project-lite = "0.2"
dunce = "1"
bytes = { version = "1", features = ["serde"], optional = true }
reqwest = { version = "0.12" }
lazy_static = "1"
phf = { version = "0.11", features = ["macros"] }
adblock = { version = "0.9", optional = true, default-features = false, features = [
    "embedded-domain-resolver",
    "full-regex-handling",
] }
rand = "0.8"
case_insensitive_string = { version = "0.2", features = ["compact", "serde"] }
hashbrown = { version = "0.15", default-features = true }
aho-corasick = "1"
sonic-rs = { version = "0.4", optional = true, features = ["utf8_lossy"] }
spider_chromiumoxide_types = { path = "types", version = "0.7" }
spider_chromiumoxide_cdp = { path = "cdp", version = "0.7" }
spider_chromiumoxide_fetcher = { path = "fetcher", version = "0.7", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dependencies.spider_firewall]
version = "2"
optional = true

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

[build-dependencies]
phf = { version = "0.11", default-features = false }
phf_codegen = "0.11"
convert_case = "0.8"

[features]
default = ["bytes", "simd"]
stream = ["tokio-tungstenite/stream"]
fetcher = []
bytes = ["dep:bytes"]
adblock = ["dep:adblock"]
simd = ["dep:sonic-rs"]
firewall = ["dep:spider_firewall"]
chrome_tls_connection = ["tokio-tungstenite/native-tls"]

# Temporary features until cargo weak dependencies bug is fixed
# See https://github.com/rust-lang/cargo/issues/10801
_fetcher-rusttls-tokio = [
    "fetcher",
    "spider_chromiumoxide_fetcher/_rustls-tokio",
]
_fetcher-native-tokio = [
    "fetcher",
    "spider_chromiumoxide_fetcher/_native-tokio",
]

[[example]]
name = "wiki-tokio"

[[example]]
name = "iframe-workaround"

[[example]]
name = "storage-cookie"

[[example]]
name = "console-logs"

[[example]]
name = "httpfuture"

[[example]]
name = "fetcher-tokio"
required-features = ["_fetcher-native-tokio"]
