[package]
name = "spider_cli"
version = "2.2.13"
authors = [
    "j-mendez <jeff@a11ywatch.com>"
]
description = "The fastest web crawler CLI written in Rust."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider", "spider_cli"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider"
include = ["src/*", "LICENSE", "README.md"]
edition = "2021"
resolver = "2"

[badges]
maintenance = { status = "as-is" }

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serde_json = "1"

[build-dependencies]
quote = "1"
failure_derive = "0.1.8"

[dependencies.spider]
version = "2.0.12"
path = "../spider"

[[bin]]
name = "spider"
path = "src/main.rs"
doc = false

[features]
default = []
jemalloc = ["spider/jemalloc"]
regex = ["spider/regex"]
full_resources = ["spider/full_resources"]
chrome_intercept = ["spider/chrome_intercept"]
chrome = ["spider/chrome"]
smart = ["spider/smart"]
tokio_io_std = ["spider/tokio_io_std"]
