[package]
name = "spider_cli"
version = "2.36.54"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "The fastest web crawler CLI written in Rust."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider", "spider_cli"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider"
include = ["src/*", "LICENSE", "README.md"]
edition = "2021"
resolver = "2"

[badges]
maintenance = { status = "as-is" }

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
serde_json = "1"

[build-dependencies]
quote = "1"
failure_derive = "0.1.8"

[dependencies.spider]
version = "2"
path = "../spider"
features = ["tokio_io_std"]

[[bin]]
name = "spider"
path = "src/main.rs"
doc = false

[features]
default = []
jemalloc = ["tikv-jemallocator"]

regex = ["spider/regex"]
full_resources = ["spider/full_resources"]
chrome_intercept = ["spider/chrome_intercept"]
chrome = ["spider/chrome"]
smart = ["spider/smart"]


[target.'cfg(all(not(windows), not(target_os = "android"), not(target_env = "musl")))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
