[package]
name = "spider_mcp"
version = "2.51.100"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "MCP (Model Context Protocol) server exposing Spider web crawler capabilities as tools."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider", "mcp", "scraper"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider_mcp"
include = ["src/*", "LICENSE", "README.md"]
edition = "2021"
resolver = "2"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-async-rw"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

[dependencies.spider]
version = "2"
path = "../spider"
features = ["tokio_io_std", "sync", "serde", "cookies"]

[dependencies.spider_transformations]
version = "2"

[[bin]]
name = "spider-mcp"
path = "src/main.rs"
doc = false

[features]
default = ["chrome", "spider_cloud"]
chrome = ["spider/chrome"]
chrome_screenshot = ["chrome"]
smart = ["spider/smart"]
spider_cloud = ["spider/spider_cloud"]
search = []
search_serper = ["search", "spider/search_serper"]
search_brave = ["search", "spider/search_brave"]
full = ["chrome_screenshot", "smart", "spider_cloud", "search_serper"]
