[package]
name = "spider_transformations"
version = "2.36.54"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "Transformation utils to use for Spider Web Crawler."
repository = "https://github.com/spider-rs/spider-transformations"
readme = "README.md"
keywords = ["crawler", "spider"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider_transformations"
edition = "2018"

[dependencies]
indexmap = { version = "1", optional = true }
aho-corasick = "1"
regex = "1"
html5ever = "0.27"
unicode-width = "0.2"
markup5ever = "0.12"
tendril = "0.4"
llm_readability = "0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
fast_html2md = { version = "0", features = ["stream", "rewriter"] }
phf = "0.11"
phf_codegen = "0.11"
lol_html = { version = "2" }
spider_scraper = "0.1"

[dependencies.spider]
version = "2"
path = "../spider"
default-features = false

[dev-dependencies]
maud = "0.26"

[features]
default = ["serde"]
indexset = ["indexmap"]
serde = ["indexmap/serde", "spider/serde"]
clippy = []
