[package]
name = "spider_utils"
version = "2.8.25"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "Utilities to use for Spider Web Crawler."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/spider"
edition = "2018"

[dependencies]
indexmap = { version = "1", optional = true }

[dependencies.spider]
version = "2"
path = "../spider"

[dependencies.spider_transformations]
version = "2"
path = "../spider_transformations"
optional = true

[features]
default = []
indexset = ["indexmap"]
serde = ["indexmap/serde", "spider/serde"]
transformations = ["dep:spider_transformations"]