[package]
name = "spider_worker"
version = "1.32.3"
authors = ["madeindjs <contact@rousseau-alexandre.fr>", "j-mendez <jeff@a11ywatch.com>"]
description = "The fastest web crawler CLI written in Rust."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider", "spider_cli"]
categories = ["web-programming"]
license = "MIT"
documentation = "https://docs.rs/spider"
include = ["src/*", "LICENSE", "README.md"]
edition = "2021"
resolver = "2"

[badges]
maintenance = { status = "as-is" }

[dependencies]
warp = "0.3.5"
lazy_static = "1.4.0"
env_logger = "0.10.0"

[dependencies.spider]
version = "1.32.3"
path = "../spider"
features = ["serde", "flexbuffers"]

[features]
default = []
scrape = []
tls = ["warp/tls"]
full_resources = ["spider/full_resources"]