[package]
name = "spider_worker"
version = "2.36.54"
authors = ["j-mendez <jeff@spider.cloud>"]
description = "The fastest web crawler as a worker or proxy."
repository = "https://github.com/spider-rs/spider"
readme = "README.md"
keywords = ["crawler", "spider", "spider_cli"]
categories = ["web-programming"]
license = "MIT"
documentation = "https://docs.rs/spider"
include = ["src/*", "LICENSE", "README.md"]
edition = "2021"
resolver = "2"

[badges]
maintenance = { status = "as-is" }

[dependencies]
warp = "0.3.7"
lazy_static = "1"
env_logger = "0.11"

[dependencies.spider]
version = "2"
path = "../spider"
features = ["serde", "flexbuffers"]

[features]
default = []
scrape = []
tls = ["warp/tls"]
full_resources = ["spider/full_resources"]
cache = ["spider/cache"]
headers = ["spider/decentralized_headers", "spider/headers"]
