[package]
name = "spider_chromiumoxide_fetcher"
version = "0.7.4"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>", "j-mendez <jeff@spider.cloud>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Contains a chromium fetcher"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[lib]
name = "chromiumoxide_fetcher"

[dev-dependencies]
ureq = "2.10.0"

[dependencies]
thiserror = "1"
anyhow = "1"
directories = "5"
os_info = { version = "3", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
async-std = { version = "1.5", features = ["unstable"], optional = true }
tokio = { version = "1", features = ["fs"], optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
surf = { version = "2.3", default-features = false, optional = true }

[features]
default = ["_native-async-std"]
async-std-runtime = ["async-std", "surf"]
tokio-runtime = ["tokio", "reqwest"]

_rustls-async-std = ["surf/h1-client-rustls", "async-std-runtime"]
_rustls-tokio = ["reqwest/rustls-tls", "tokio-runtime"]
_native-async-std = ["surf/h1-client", "async-std-runtime"]
_native-tokio = ["reqwest/native-tls", "tokio-runtime"]
