[package]
name = "spider_chromiumoxide_types"
version = "0.7.4"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>", "j-mendez <jeff@spider.cloud>"]
edition = "2021"
description = "Contains the essential types necessary for using chromiumoxide"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[lib]
name = "chromiumoxide_types"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
